--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Display dotnet version
         run: dotnet --version
       - name: Install dependencies
-        run: dotnet restore
+        run: dotnet restore CurrencyApi/CurrencyApi.csproj
       - name: Build
-        run: dotnet build
+        run: dotnet build CurrencyApi/CurrencyApi.csproj
       
