--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,8 @@ jobs:
         run: dotnet build CurrencyApi/CurrencyApi.csproj
       - name: Publish
         run: dotnet publish CurrencyApi/CurrencyApi.csproj -c Release -o web
-      - uses: actions/upload-artifact@v4
+      - name: Upload
+        uses: actions/upload-artifact@v4
         with:
           name: web
           path: web
