--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,7 +25,8 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: web
+          name: web-artifact
+          
       - name: Display structure of downloaded files
         run: ls -R
           
