--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,9 +28,9 @@ jobs:
           dotnet build CurrencyApi/CurrencyApi.csproj -c Release 
           dotnet publish CurrencyApi/CurrencyApi.csproj -c Release -o ./web
           
-      - name: Upload
+      - name: web
         uses: actions/upload-artifact@v4
         with:
-          name: web
+          name: web-artifact
           path: ./web
       
