--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,12 +1,9 @@
-name: publish web app
-
+name: publish
 on:
-  release:
-    types: [published]
-  workflow_dispatch: 
-    inputs:
-      releaseType:
-        description: 'Release to dev'
+  workflow_run:
+    workflows: [build]
+    branches: [main]
+    types: [completed]
 
 permissions:
   id-token: write
@@ -14,8 +11,6 @@ permissions:
 
 env:
   AZURE_WEBAPP_NAME: poc-github-testing
-  AZURE_WEBAPP_PACKAGE_PATH: '.'
-  DOTNET_VERSION: '8.0.x'          
   AZURE_RESOURCEGROUP_NAME: prod-rg-weu-web 
 
 jobs:
@@ -23,10 +18,24 @@ jobs:
     name: Deploy to dev
     runs-on: ubuntu-latest
     steps:
+      - name: Get run ID of "build" workflow
+        id: get-run-id
+        run: |
+          OTHER_REPO="${{ github.repository }}"
+          WF_NAME="build"
+          RUN_ID=`gh run --repo ${OTHER_REPO} list --workflow ${WF_NAME} --json databaseId --jq .[0].databaseId`
+          echo "Detected latest run id of ${RUN_ID} for workflow ${WF_NAME}"
+          echo "run-id=${RUN_ID}" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ github.token }}
+
       - uses: actions/download-artifact@v4
         with:
           name: web-artifact
-          
+          github-token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          run-id: ${{ steps.get-run-id.outputs.run-id }}
+
       - name: Display structure of downloaded files
         run: ls -R
           
